home pela metade

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 @import "tailwindcss";
 
 * {
-  width: 1440px;
-  /* margin: 0; */
-  /* padding: 0; */
+  /* problemas com relação ao tamanho do meu monitor */
+  width: 1423px;
   box-sizing: border-box;
 }
 
