correção de tamanhos no w-*

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-* {
+body {
   /* problemas com relação ao tamanho do meu monitor */
   width: 1423px;
   box-sizing: border-box;
