--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 body {
   /* problemas com relação ao tamanho do meu monitor */
-  width: 1440px;
+  /* width: 1440px; */
   box-sizing: border-box;
 }
 
